fix the sitemap.xml path

--- a/_config.yml
+++ b/_config.yml
@@ -80,3 +80,6 @@ theme: random
 deploy:
   type: git
   repo: https://github.com/ReinhardHsu/reinhardhsu.github.io.git
+
+sitemap:
+    path: sitemap.xml
